WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45324
Fix compile errors in DrawingBuffer if USE(ACCELERATED_COMPOSITING) is not set
https://bugs.webkit.org/show_bug.cgi?id=45324
Summary
Fix compile errors in DrawingBuffer if USE(ACCELERATED_COMPOSITING) is not set
James Robinson
Reported
2010-09-07 14:55:17 PDT
Fix compile errors in DrawingBuffer if ENABLE(ACCELERATED_COMPOSITING) is not set
Attachments
Patch
(4.03 KB, patch)
2010-09-07 14:58 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Patch
(4.00 KB, patch)
2010-09-07 15:04 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2010-09-07 14:58:05 PDT
Created
attachment 66770
[details]
Patch
James Robinson
Comment 2
2010-09-07 15:01:38 PDT
Oh blah, disregard this patch. It's USE() not ENABLE()...
James Robinson
Comment 3
2010-09-07 15:04:52 PDT
Created
attachment 66772
[details]
Patch
James Robinson
Comment 4
2010-09-07 15:58:12 PDT
Ping for review. This causes one of the chromium bots to fail to compile, since it explicitly sets use_accelerated_compositing to 0.
Kenneth Russell
Comment 5
2010-09-07 16:19:14 PDT
Comment on
attachment 66772
[details]
Patch Looks good to me.
James Robinson
Comment 6
2010-09-07 16:37:40 PDT
Comment on
attachment 66772
[details]
Patch Clearing flags on attachment: 66772 Committed
r66931
: <
http://trac.webkit.org/changeset/66931
>
James Robinson
Comment 7
2010-09-07 16:37:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug